# evervault-cli

./: .gitignore  Cargo.toml  LICENCE  README.md  cage.toml  relay.json  run.sh  sample-user.Dockerfile  test.cage.toml  test.enclave.toml  test1.txt  test2.txtx  testRepro.Dockerfile  v0.cage.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/fixtures/: code-change-push.test.json  release-tag.test.json
.github/workflows/: build-and-publish.yml  compile-cli-for-target.yml  lint-and-test-cli.yml  lint.yml  release-cli-version-staging.yml  release-cli-version.yml  test-windows.yml
crates/cli-message/: Cargo.toml
crates/cli-message/src/: error.rs  lib.rs  parse.rs  tok.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/common/src/api/: assets.rs  client.rs  enclave_assets.rs  function.rs  mod.rs  papi.rs
crates/common/src/enclave/: mod.rs  types.rs
crates/common/src/function/: mod.rs
crates/common/src/relay/: mod.rs
crates/ev-cli/: Cargo.toml
crates/ev-cli/scripts/: generate-installer.sh  install.template  update-versions.sh
crates/ev-cli/src/: auth.rs  errors.rs  fs.rs  main.rs  theme.rs  tty.rs  version.rs
crates/ev-cli/src/api/: mod.rs
crates/ev-cli/src/commands/: decrypt.rs  encrypt.rs  interact.rs  mod.rs  update.rs
crates/ev-cli/src/commands/enclave/: attest.rs  build.rs  cert.rs  delete.rs  deploy.rs  describe.rs  env.rs  init.rs  list.rs  logs.rs  migrate.rs  mod.rs  restart.rs  scale.rs  update.rs
crates/ev-cli/src/commands/function/: create_toml.rs  delete.rs  deploy.rs  init.rs  mod.rs  run.rs
crates/ev-cli/src/commands/function/deploy/: mod.rs  output.rs
crates/ev-cli/src/commands/function/env/: delete.rs  get.rs  mod.rs  set.rs
crates/ev-cli/src/commands/relay/: create.rs  deploy.rs  mod.rs
crates/ev-cli/src/function/: mod.rs
crates/ev-cli/src/relay/: mod.rs
crates/ev-cli/tests/: cert.pem  key.pem  v0.cage.toml
crates/ev-enclave/: Cargo.toml  nitro-cli-image.Dockerfile  test.enclave.toml
crates/ev-enclave/scripts/: generate-installer.sh  update-versions.sh
crates/ev-enclave/src/: common.rs  config.rs  lib.rs  main.rs  progress.rs  test_utils.rs
crates/ev-enclave/src/api/: assets.rs  client.rs  enclave.rs  enclave_assets.rs  mod.rs
crates/ev-enclave/src/attest/: error.rs  mod.rs
crates/ev-enclave/src/cert/: error.rs  mod.rs
crates/ev-enclave/src/cli/: attest.rs  build.rs  cert.rs  delete.rs  deploy.rs  describe.rs  dev.rs  encrypt.rs  env.rs  init.rs  list.rs  logs.rs  migrate.rs  mod.rs  restart.rs  scale.rs  update.rs
crates/ev-enclave/src/delete/: error.rs  mod.rs
crates/ev-enclave/src/deploy/: error.rs  mod.rs
crates/ev-enclave/src/describe/: error.rs  mod.rs
crates/ev-enclave/src/docker/: command.rs  error.rs  parse.rs  utils.rs
crates/ev-enclave/src/enclave/: common.rs  config.rs  error.rs  mod.rs  nitro-cli-image.Dockerfile  progress.rs  test_utils.rs  types.rs
crates/ev-enclave/src/enclave/api/: assets.rs  client.rs  enclave.rs  mod.rs
crates/ev-enclave/src/enclave/cert/: error.rs  mod.rs
crates/ev-enclave/src/enclave/cli/: attest.rs  build.rs  cert.rs  delete.rs  deploy.rs  describe.rs  dev.rs  encrypt.rs  env.rs  init.rs  list.rs  logs.rs  migrate.rs  mod.rs  restart.rs  scale.rs  update.rs
crates/ev-enclave/src/enclave/delete/: error.rs  mod.rs
crates/ev-enclave/src/enclave/deploy/: error.rs  mod.rs
crates/ev-enclave/src/enclave/describe/: error.rs  mod.rs
crates/ev-enclave/src/enclave/docker/: command.rs  error.rs  utils.rs
crates/ev-enclave/src/enclave/encrypt/: mod.rs
crates/ev-enclave/src/enclave/env/: mod.rs
crates/ev-enclave/src/enclave/logs/: mod.rs
crates/ev-enclave/src/enclave/migrate/: mod.rs
crates/ev-enclave/src/enclave/nitro/: error.rs  mod.rs  types.rs
crates/ev-enclave/src/enclave/restart/: mod.rs
crates/ev-enclave/src/enclave/version/: mod.rs
crates/ev-enclave/src/env/: mod.rs
crates/ev-enclave/src/logs/: mod.rs
crates/ev-enclave/src/migrate/: mod.rs
crates/ev-enclave/src/restart/: mod.rs
crates/ev-enclave/src/version/: mod.rs
crates/ev-enclave/test-cert/: cert.pem
crates/pcr-sign/: Cargo.toml  demo-pcrs.txt  v1.demo-pcrs.txt
crates/pcr-sign/scripts/: generate-test-signature.sh
crates/pcr-sign/src/: lib.rs
crates/pcr-sign/tests/: validate_signature.rs
fixtures/: cert.pem  key.pem  v0.cage.toml
hello-cage/: Dockerfile  Dockerfile-old  README.md  cage.toml  index.js  install-artillery.sh  load-test.yaml  myenv.txt  package-lock.json  package.json  req_loop.sh  server_request_log.txt  task-def.json
scripts/: generate-installer.sh  insert-cli-version.sh  insert-crate-versions.sh  install.template  update-versions.sh
src/: common.rs  config.rs  enclave.rs  lib.rs  main.rs  nitro-cli-image.Dockerfile  progress.rs  test_utils.rs
src/api/: assets.rs  cage.rs  client.rs  enclave.rs  mod.rs
src/attest/: error.rs  mod.rs
src/cert/: error.rs  mod.rs
src/cli/: attest.rs  build.rs  cert.rs  delete.rs  deploy.rs  describe.rs  dev.rs  encrypt.rs  env.rs  init.rs  list.rs  logs.rs  migrate.rs  mod.rs  restart.rs  scale.rs  update.rs
src/delete/: error.rs  mod.rs
src/deploy/: error.rs  mod.rs
src/describe/: error.rs  mod.rs
src/dev/: mod.rs
src/docker/: command.rs  error.rs  mod.rs  parse.rs  utils.rs
src/enclave/: error.rs  mod.rs  nitro-cli-image.Dockerfile  types.rs
src/encrypt/: error.rs  mod.rs
src/env/: mod.rs
src/logs/: mod.rs
src/restart/: mod.rs
src/version/: mod.rs
tests/: compare-reproducible-builds.sh
