[package]
name = "ev-cage"
version = "0.0.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
tokio = { version = "1.18.2", features = ["rt","rt-multi-thread","macros","fs"] }
tokio-util = { version = "0.7.4", features = ["full"] }
bytes = "1"
itertools = "0.10.3"
tempfile = "3.3.0"
futures-core = "0.3.21"
futures = "0.3.21"
human-panic = "1.0.3"
log = "0.4.17"
env_logger = "0.9.0"
atty = "0.2.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.31"
rcgen = { version = "0.9.3", features = ["pem"] }
chrono = "0.4.19"
toml = "0.5.9"
reqwest = { version = "0.11.12", features = ["json", "stream"] }
zip = { version = "0.6.2", default-features = false }
async-trait = "0.1.57"
indicatif = { version = "0.17.1" }
dialoguer = "0.10.2"
async-stream = "0.3.3"
tokio-stream = "0.1.9"
minus = { version = "5.0.5", features = ["static_output"] }
exitcode = "1.1.2"
tokio-rustls = { version = "0.23", features = ["dangerous_configuration"] }
x509-parser = "0.14.0"
hex = "0.4.3"
axum = "0.5.16"
rust-crypto = { version = "0.1.21", registry="evervault-rust-libraries", features=["vendored-openssl"] }
serde_cbor = "0.11"
base64 = "0.13.0"
aws-nitro-enclaves-image-format = "0.2.0"
sha2 = "0.9.9"
git2 = "0.17.1"
version-compare = "0.1.1"
regex = "1.8.1"

[dev-dependencies]
tokio-test = "0.4.2"
serial_test = "2.0.0"

[target.'cfg(unix)'.dependencies]
aws-nitro-enclaves-nsm-api = { version = "0.2.1" }
attestation-doc-validation = "0.7.3" 

[registry]
global-credential-providers = ["cargo:token"]