[package]
name = "common"
version = "1.0.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
reqwest = { version = "0.11.12", features = ["json", "stream"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.31"
exitcode = "1.1.2"
toml = "0.5.9"
elliptic-curve = { version = "0.13.8", features = ["pkcs8"] }
pcr-sign = { path = "../pcr-sign", optional=true }
tempfile = "3.10.1"
tokio-util = "0.7.11"
tokio = "1.38.0"

[dev-dependencies]
mockall = "0.11.4"
