[package]
name = "ev-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version= "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
human-panic = "1.0.3"
log = "0.4.17"
env_logger = "0.9.0"
exitcode = "1.1.2"
dialoguer = "0.10.2"
attestation-doc-validation = "0.7.4"
ev-enclave = { path = "../ev-enclave" }	
common = { path = "../common" }
chrono = "0.4.19"
toml = "0.5.9"
semver = "1.0.20"
tempfile = "3.3.0"
