[package]
edition = "2021"
name = "ev-cli"
version = "1.0.0-dev"

[[bin]]
name = "ev"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
attestation-doc-validation = "0.7.4"
atty = "0.2.14"
chrono = "0.4.19"
clap = {version = "4.5.4", features = ["derive"]}
common = {path = "../common"}
dialoguer = "0.10.2"
env_logger = "0.9.0"
ev-enclave = {path = "../ev-enclave"}
exitcode = "1.1.2"
human-panic = "1.0.3"
indicatif = "0.17.8"
lazy_static = "1.4.0"
log = "0.4.17"
openssl ={version = "0.10.64", features = ["vendored"]}
regex = "1.10.4"
semver = "1.0.20"
sentry = "0.32.3"
serde = {version = "1.0.199", features = ["derive"]}
serde_json = "1.0.116"
strum = { version = "0.26.2", features = [ "derive", "strum_macros" ]}
strum_macros = "0.26.2"
tempfile = "3.10.1"
thiserror = "1.0.59"
tokio = {version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "fs"]}
tokio-util = "0.7.11"
toml = "0.5.9"
zip = "2.1.3"
