[package]
edition = "2021"
name = "ev-enclave"
version = "1.0.0-dev"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.3"
async-trait = "0.1.57"
attestation-doc-validation = "0.7.4"
atty = "0.2.14"
aws-nitro-enclaves-image-format = "0.2.0"
axum = "0.5.16"
base64 = "0.13.0"
bytes = "1"
chrono = "0.4.19"
clap = {version = "4.5.4", features = ["derive"]}
common = {path = "../common"}
dialoguer = "0.10.2"
elliptic-curve = {version = "0.13.8", features = ["pkcs8"]}
env_logger = "0.9.0"
exitcode = "1.1.2"
futures = "0.3.21"
futures-core = "0.3.21"
git2 = "0.18"
hex = "0.4.3"
human-panic = "1.0.3"
indicatif = {version = "0.17.1"}
itertools = "0.10.3"
log = "0.4.17"
minus = {version = "5.0.5", features = ["static_output"]}
pcr-sign = {path = "../pcr-sign", optional = true}
rcgen = {version = "0.9.3", features = ["pem"]}
regex = "1.8.1"
reqwest = {version = "0.11.12", features = ["json", "stream"]}
semver = "1.0.20"
serde = {version = "1.0.152", features = ["derive"]}
serde_cbor = "0.11"
serde_json = "1.0.91"
sha2 = "0.9.9"
tempfile = "3.3.0"
thiserror = "1.0.31"
tokio = {version = "1.18.2", features = ["rt", "rt-multi-thread", "macros", "fs"]}
tokio-rustls = {version = "0.23", features = ["dangerous_configuration"]}
tokio-stream = "0.1.9"
tokio-util = {version = "0.7.4", features = ["full"]}
toml = "0.5.9"
version-compare = "0.1.1"
x509-parser = "0.14.0"
zip = {version = "0.6.2", default-features = false}

[dev-dependencies]
mockall = "0.11.4"
serial_test = "2.0.0"
tokio-test = "0.4.2"

[features]
pcr_signature = ["pcr-sign"]
